menu fix on mobile

--- a/main.css
+++ b/main.css
@@ -170,7 +170,7 @@ p, span, li {
     background-color: #111010;
     padding: 8px;
     padding-left: 16px;
-    width: 100px;
+    width: 120px;
     height: 182px;
     overflow: auto;
   }
